feat: artists songs have now an index to improve velocity